--- a/.abf.yml
+++ b/.abf.yml
@@ -1,2 +1,2 @@
 sources:
-  "gtksourceviewmm-3.2.0.tar.xz": cac8d2fdde7b862bdb5eb12c6b8998a29e3fcf95
+  gtksourceviewmm-3.21.2.tar.xz: 8b0eef135dc2e8d73b1165393ea69dcaab2c46ae
